переделал шаблон портфолио под себя

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -84,15 +84,15 @@
 
 /* Resume Style */
 .cta-btn--resume {
-  color: $white-color;
+  color: $dark-blue-text;
   border: 2px solid $white-color;
 
   &::after {
-    background: $white-color;
+    background: $dark-blue-text;
   }
 
   &:hover {
-    color: $secondary-color;
+    color: $white-color;
     text-decoration: none;
 
     &::after {
