--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #344de3; // #02aab0
+$secondary-color: #ca96ff; // #00cdac
 
 $white-color: #fff;
 
