добавил разделы с информацией

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -85,7 +85,7 @@
 /* Resume Style */
 .cta-btn--resume {
   color: $dark-blue-text;
-  border: 2px solid $white-color;
+  border: 2px solid $dark-grey;
 
   &::after {
     background: $dark-blue-text;
