--- a/src/sass/sections/_contact.scss
+++ b/src/sass/sections/_contact.scss
@@ -6,10 +6,11 @@
   // );
   // -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   // clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
-  padding: 15rem 0 10rem 0;
+  padding: 0 0 10rem 0;
   margin-top: -10rem;
   margin-bottom: -1px;
   color: $dark-grey;
+  background-color: #fafafa;
 
   @include respond(tab-land) {
     padding: 10rem 0;
